Finalizei o nav do projeto

--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>CLONE-whatsapp</title>
 </head>
 
 <body>
-
+    <nav class="nav-container white-bg">
+        <div class="nav-logo"><img width="130px" src="./assets/images-whatsapp/logo.png" alt=""></div>
+        <div class="nav-links">
+            <ul id="items-menu">
+                <li><a href="#top3">Recursos</a></li>
+                <li><a href="#grid-one">Privacidade</a></li>
+                <li><a href="#gallery">Central de ajuda</a></li>
+                <li><a href="#grid-two">Blog</a></li>
+            </ul>
+        </div>
+        <div class="nav-button">
+            <button><span>Baixar</span><i class='bx bxs-download'></i></button>
+        </div>
+    </nav>
 </body>
 
 </html>
