--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Navegação -->
     <nav class="nav-container white-bg">
         <div class="nav-logo"><img width="130px" src="./assets/images-whatsapp/logo.png" alt=""></div>
         <div class="nav-links">
@@ -25,6 +26,7 @@
             <button><span>Baixar</span><i class='bx bxs-download'></i></button>
         </div>
     </nav>
+    <!-- Container um (banner) -->
 </body>
 
 </html>
