atualizei os estilos e a estrutura

--- a/index.html
+++ b/index.html
@@ -10,23 +10,47 @@
     <title>CLONE-whatsapp</title>
 </head>
 
-<body>
+<body class="white-bg">
     <!-- Navegação -->
-    <nav class="nav-container white-bg">
-        <div class="nav-logo"><img width="130px" src="./assets/images-whatsapp/logo.png" alt=""></div>
-        <div class="nav-links">
-            <ul id="items-menu">
-                <li><a href="#top3">Recursos</a></li>
-                <li><a href="#grid-one">Privacidade</a></li>
-                <li><a href="#gallery">Central de ajuda</a></li>
-                <li><a href="#grid-two">Blog</a></li>
-            </ul>
+    <aside class="menu">
+        <div class="nav-container">
+            <h1 class="nav-logo"><img src="./assets/images-whatsapp/logo.png" alt=""></h1>
+            <nav>
+                <div class="nav-links">
+                    <ul id="items-menu">
+                        <li><a href="#top3">Recursos</a></li>
+                        <li><a href="#grid-one">Privacidade</a></li>
+                        <li><a href="#gallery">Central de ajuda</a></li>
+                        <li><a href="#grid-two">Blog</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="nav-button">
+                <button class="btn-download"><span>Baixar</span><i class='bx bxs-download'></i></button>
+            </div>
         </div>
-        <div class="nav-button">
-            <button><span>Baixar</span><i class='bx bxs-download'></i></button>
-        </div>
-    </nav>
+    </aside>
+
+    <div class="menu-spacing"></div>
+
     <!-- Container um (banner) -->
+    <section class="intro height-bg">
+        <div class="intro-bg">
+            <div class="main-content intro-content">
+                <div class="intro-text-content">
+                    <h1>Privacidade para as suas mensagens</h1>
+                    <p>Mensagens e chamadas privadas simples, seguras e gratuitas*, disponíveis em todo o mundo.</p>
+                    <button class="btn-download"><span>Baixar</span><i class='bx bxs-download'></i></button>
+                </div>
+                <div class="intro-images">
+                    <img src="./assets/images-whatsapp/audio.png" alt="">
+                    <img src="./assets/images-whatsapp/foto.png" alt="">
+                    <img src="./assets/images-whatsapp/mensagem.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="height-bg"></section>
 </body>
 
 </html>
